--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-flare-toast",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "type": "module",
   "description": "React Flare Toast is a simple and customizable toast component for React applications.",
   "main": "dist/index.js",
@@ -13,7 +13,7 @@
     "react-flare-toast"
   ],
   "author": "Priyam Mondal",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/plugin-transform-runtime": "^7.25.4",
