--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "react-flare-toast",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "type": "module",
   "description": "React Flare Toast is a simple and customizable toast component for React applications.",
   "main": "dist/index.js",
+  "repository": {
+    "url": "https://github.com/Priyammondal/react-flare-toast"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "rollup": "rollup -c"
   },
   "keywords": [
+    "react",
+    "notification",
+    "toast",
+    "react-component",
+    "push",
+    "alert",
     "react-toast",
     "react-flare-toast"
   ],
