--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-flare-toast",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "type": "module",
   "description": "React Flare Toast is a simple and customizable toast component for React applications.",
   "main": "dist/index.js",
@@ -30,9 +30,13 @@
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "cssnano": "^7.0.6",
     "react-icons": "^5.3.0",
+    "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "uuid": "^10.0.0"
+    "rollup-plugin-terser": "^7.0.2"
+  },
+  "dependencies": {
+    "nanoid": "^5.0.7"
   }
 }
